syntax = 'proto3';
package org.dneversky.gateway;

import "google/protobuf/timestamp.proto";

// Data Transfer Objects

message User {
  int64 id = 1;
  string username = 2;
  repeated Role roles = 4;
  string name = 6;
  string phone = 7;
  google.protobuf.Timestamp birthday = 8;
  string avatar = 9;
  string city = 10;
  string about = 11;
  google.protobuf.Timestamp registeredDate = 12;
  Post post = 13;
}

message UserPrincipal {
  int64 id = 1;
  string username = 2;
  string password = 3;
  repeated Role roles = 4;
  bool enabled = 5;
}

message SaveUserRequest {
  string username = 1;
  string password = 2;
  string name = 3;
  string phone = 4;
  google.protobuf.Timestamp birthday = 5;
  int32 postId = 6;
}

message UpdateUserRequest {
  int64 id = 1;
  string username = 2;
  string name = 3;
  string phone = 4;
  google.protobuf.Timestamp birthday = 5;
  int32 postId = 6;
  string avatar = 7;
  string city = 8;
  string about = 9;
}

message Role {
  int32 id = 1;
  string name = 2;
  repeated int64 usersId = 3;
}

message Post {
  int32 id = 1;
  string name = 2;
  repeated int64 usersId = 3;
}

// Requests / Responses

message UserByUsernameRequest {
  string username = 1;
}

message UserByIdRequest {
  int64 id = 1;
}

message AllUsersRequest {}

message AllUsersResponse {
  repeated User users = 1;
}

// Services

service UserService {
  rpc getAllUsers(AllUsersRequest) returns (AllUsersResponse);
  rpc getUserByUsername(UserByUsernameRequest) returns (User);
  rpc getUserById(UserByIdRequest) returns (User);
  rpc saveUser(SaveUserRequest) returns (User);
  rpc updateUser(UpdateUserRequest) returns (User);
  rpc getUserPrincipalByUsername(UserByUsernameRequest) returns (UserPrincipal);
}